// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UsersControlpanelGroups renders a UsersControlpanelGroups component 1`] = `
<tr
  className=""
>
  <td
    className=""
  >
    Administrators
  </td>
  <td
    className=""
  >
    <div
      className="ui fitted checkbox"
      onChange={[Function]}
      onClick={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
    >
      <input
        checked={false}
        className="hidden"
        disabled={false}
        readOnly={true}
        tabIndex={0}
        type="checkbox"
        value="Administrators.Member"
      />
      <label />
    </div>
  </td>
  <td
    className=""
  >
    <div
      className="ui fitted checkbox"
      onChange={[Function]}
      onClick={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
    >
      <input
        checked={false}
        className="hidden"
        disabled={false}
        readOnly={true}
        tabIndex={0}
        type="checkbox"
        value="Administrators.Reader"
      />
      <label />
    </div>
  </td>
  <td
    className=""
  >
    <div
      className="ui checked fitted checkbox"
      onChange={[Function]}
      onClick={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
    >
      <input
        checked={true}
        className="hidden"
        disabled={false}
        readOnly={true}
        tabIndex={0}
        type="checkbox"
        value="Administrators.Manager"
      />
      <label />
    </div>
  </td>
  <td
    className="right aligned"
  >
    <div
      aria-expanded={false}
      className="ui dropdown"
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      role="listbox"
      tabIndex={0}
    >
      <i
        aria-hidden="true"
        className="ellipsis horizontal icon"
        onClick={[Function]}
      />
      <div
        className="menu transition left"
      >
        <div
          className="item"
          onClick={[Function]}
          role="option"
        >
          <svg
            className="icon"
            dangerouslySetInnerHTML={
              Object {
                "__html": undefined,
              }
            }
            onClick={null}
            style={
              Object {
                "fill": "currentColor",
                "height": "15px",
                "width": "auto",
              }
            }
            viewBox=""
            xmlns=""
          />
          Delete
        </div>
      </div>
    </div>
  </td>
</tr>
`;

exports[`UsersControlpanelGroups renders a UsersControlpanelGroups component with no Manager user 1`] = `
<tr
  className=""
>
  <td
    className=""
  >
    Administrators
  </td>
  <td
    className=""
  >
    <div
      className="ui fitted checkbox"
      onChange={[Function]}
      onClick={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
    >
      <input
        checked={false}
        className="hidden"
        disabled={false}
        readOnly={true}
        tabIndex={0}
        type="checkbox"
        value="Administrators.Member"
      />
      <label />
    </div>
  </td>
  <td
    className=""
  >
    <div
      className="ui fitted checkbox"
      onChange={[Function]}
      onClick={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
    >
      <input
        checked={false}
        className="hidden"
        disabled={false}
        readOnly={true}
        tabIndex={0}
        type="checkbox"
        value="Administrators.Reader"
      />
      <label />
    </div>
  </td>
  <td
    className=""
  >
    <div
      className="ui checked disabled fitted checkbox"
      onChange={[Function]}
      onClick={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
    >
      <input
        checked={true}
        className="hidden"
        disabled={true}
        readOnly={true}
        tabIndex={-1}
        type="checkbox"
        value="Administrators.Manager"
      />
      <label />
    </div>
  </td>
  <td
    className="right aligned"
  />
</tr>
`;
